# teamflow

./: .env.example  .env.production  .env.production.template  .gitignore  00-MASTER-IMPLEMENTATION-ROADMAP.md  02-WEEK-3-6-UI-ENHANCEMENT-GUIDE.md  06-WEEK-19-22-ENTERPRISE-GUIDE.md  07-WEEK-23-26-TESTING-QA-GUIDE.md  AUTHENTICATION_OPTIMIZATION.md  CRITICAL-DEVELOPMENT-PHASE-ASSESSMENT.md  DAILY-IMPLEMENTATION-CHECKLIST.md  DAILY-WORKFLOW.md  DAY-1-COMPLETION-REPORT.md  DAY-21-COMPLETION-ASSESSMENT.md  DAY-3-COMPLETION-REPORT.md  DAY22-COMPLETION-REPORT.md  DEPLOYMENT-STATUS.md  DEVELOPMENT-PROGRESS-TRACKER.md  HIGH-VALUE-FEATURES-TRACKER.md  HYBRID-APPROACH-EXECUTION-TRACKER.md  IMPLEMENTATION-GUIDE-WORKFLOW.md  IMPLEMENTATION-MASTER-PLAN.md  LICENSE  MISSION-ACCOMPLISHED.md  PHASE-1-CORE-UI-INTEGRATION.md  PHASE-2-PRODUCTION-POLISH.md  PHASE-3-ADVANCED-FEATURES.md  PHASE2-START-HERE.md  PHASE2-TODO-LIST.md  PLAN-DOCUMENTS-AUDIT-AND-ARCHIVE.md  PRODUCTION-DEPLOYMENT-PLAN.md  PRODUCTION-MONITORING-DASHBOARD.md  PROJECT-ALIGNMENT-ASSESSMENT.md  README.md  START-HERE.md  TEAMFLOW-IMPLEMENTATION-ROADMAP.md  TEMPLATE-SYSTEM-ASSESSMENT.md  TEMPLATE-SYSTEM-PROGRESS-AND-ADAPTATION-GUIDE.md  WEEK-1-IMPLEMENTATION-PLAN.md  WEEK-2-IMPLEMENTATION-PLAN.md  (+25 more)
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml  dependencies.yml  deploy.yml
backend/: .env.example  .env.production  .pre-commit-config.yaml  DEPLOYMENT-FILE-MANAGEMENT-NOTES.md  Dockerfile.dev  Dockerfile.prod  Makefile  VALIDATION-RESULTS-DAY1.md  __init__.py  alembic.ini  auth_optimizer.py  create_test_template.py  create_test_user.py  day5_security_test_report.json  day6_performance_completion_report.json  day6_performance_validation_results.json  day7_admin_dashboard_results.json  nixpacks.toml  pytest.ini  railway.json  requirements-dev.txt  requirements-minimal.txt  requirements.txt  requirements_complete.txt  setup_database.py  test_advanced_features.py  test_day5_security_system.py  test_day6_performance_optimization.py  test_day7_admin_dashboard.py  test_domain_config.py  test_enhanced_comment_phase_b.py  test_enhanced_time_tracking.py  test_performance_system.py  test_phase1_validation.py  test_section3_final_validation.py  test_webhook_integration.py  test_websocket_client.py  test_workflow_automation.py  validate_day6_completion.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py  main_old.py
backend/dev-tools/: README.md
backend/load_tests/: load_test_runner.py  stress_tests.py
backend/scripts/: __init__.py  populate_sample_data.py  server.py  start-production.sh
backend/tests/: conftest.py  test_collaboration.py
docs/: 01-project-overview.md  02-development-progress.md  02-technical-architecture.md  03-development-status-verification.md  03-implementation-roadmap.md  04-development-guide.md  04-development-setup.md  04-phase-3-day-6-performance-optimization.md  05-api-documentation.md  05-testing-strategy.md  06-deployment-guide.md  ARCHITECTURE.md  COMPREHENSIVE-CRITICAL-EVALUATION.md  CURRENT-IMPLEMENTATION-PLAN.md  CURRENT-PHASE3-PROGRESS-ASSESSMENT.md  DAY-12-ADVANCED-ENTITY-MANAGEMENT-COMPLETE.md  DAY-16-ERROR-RECOVERY-RESILIENCE-COMPLETE.md  DAY-17-INTEGRATED-TEMPLATE-BUILDER-COMPLETE.md  DAY-18-WORKFLOW-AUTOMATION-BUILDER-COMPLETE.md  DAY-19-FILE-MANAGEMENT-RESTORATION-COMPLETE.md  DAY-2-IMPLEMENTATION-PLAN.md  DAY-20-USER-ONBOARDING-FLOW-COMPLETE.md  DAY-21-ACCESSIBILITY-COMPLIANCE-COMPLETE.md  DAY-27-REAL-TIME-COLLABORATION-PLAN.md  DAY-3-IMPLEMENTATION-PLAN.md  DOCUMENTATION-REFERENCE.md  DOCUMENT_ORGANIZATION_SUMMARY.md  FINAL-SUCCESS-REPORT.md  FRAMEWORK-EVOLUTION-ANALYSIS.md  IMPLEMENTATION-ROADMAP.md  PHASE-1-IMPLEMENTATION-COMPLETE.md  PHASE2-DAY2-SUCCESS.md  PHASE2-DAY3-SUCCESS.md  PLAN-ORGANIZATION-UPDATE.md  PRODUCTION-DATABASE-MIGRATION-PLAN.md  PRODUCTION-STATUS.md  QUICK-REFERENCE-GUIDE.md  README.md  TEAMFLOW-FRAMEWORK-GUIDE.md  TECHNICAL-IMPLEMENTATION-GUIDE.md  (+15 more)
docs/archive/: CRITICAL-DOCUMENTATION-ASSESSMENT.md  NEXT-PHASE-EXPLANATION.md  PROJECT-COMPLETE.md  PROJECT-CONSOLIDATION-FINAL.md  PROJECT-FINAL-STATUS.md  README-FINAL.md  phase-1-evaluation.md  phase2-day1-completion.md  phase2-day2-assessment.md  phase2-day2-completion.md
docs/template-system/: PHASE-1-CODEBASE-ANALYSIS.md  PHASE-2-SECTION-1-OVERVIEW.md  PHASE-2-SECTION-2-CONFIGURATION.md  PHASE-2-SECTION-3-CODE-GENERATION.md  PHASE-2-SECTION-4-API-ROUTES.md  PHASE-2-SECTION-5-FRONTEND-COMPONENTS.md  PHASE-2-SECTION-6-VALIDATION-TESTING.md  PHASE-2-SECTION-7-INTEGRATION-DEPLOYMENT.md  PHASE-2-SECTION-8-MIGRATION-ADAPTATION.md  PHASE-2-TEMPLATE-ENGINE-DESIGN.md  PHASE-3-IMPLEMENTATION-COMPLETE.md  PHASE-3-SECTION-1-IMPLEMENTATION-OVERVIEW.md  PHASE-3-SECTION-2-CORE-INFRASTRUCTURE.md  (+5 more)
domain_configs/: e_commerce.yaml  healthcare.yaml  property_management.yaml  real_estate.yaml  real_estate_simple.yaml  teamflow_original.yaml
domains/: stock_portfolio.yaml
frontend/: .env.development  .env.example  .env.production  Dockerfile.prod  index.html  jest.config.json  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
scripts/: analyze_dependencies.py  backup.sh  demo.py  deploy-production.sh  deploy-to-cloud.sh  deployment-guide.sh  dns-configuration.md  fleet_example.py  framework_generator.py  init-db.sql  kill-server.sh  local-validation.sh  plugin_system.py  production-monitor.sh  production-validation.py  restore.sh  simple_demo.py  start-server.sh  template_registry.py  validate-production.py  verify-deployment-readiness.sh
(+366 files in other folders)
